--- a/src/App.css
+++ b/src/App.css
@@ -258,6 +258,10 @@ hr{
 .home-text{
   margin-top: 13vw;
   margin-left: 9vw;
+  animation-name: homeAnimation;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 .home-text > h1{
   font-size: 4vw;
@@ -275,14 +279,16 @@ hr{
   position: relative;
   color: white;
   top: 1.5vw;
-  text-transform: uppercase; ;
+  text-transform: uppercase;
 }
 .comman-btn:hover{
   background-color: #17181f;
   color: #57BE6C;
 }
-
-
+@keyframes homeAnimation {
+  from {margin-top: 14vw;}
+  to {margin-top: 13;}
+}
 
 
 
@@ -359,9 +365,11 @@ hr{
 .filter-page{
   overflow: hidden;
   display: flex;
-  width: 86.5vw;
+  width: 58vw;
   margin-left: 6vw;
-  height: 20vw;
+  height: 12vw;
+  position: relative;
+  top: 2vw;
   animation-name: fiterPageAnimation;
   animation-duration: 0.7s;
 }
@@ -371,6 +379,8 @@ hr{
   width: 86.5vw;
   margin-left: 6vw;
   height: 0vw;
+  position: relative;
+  top: 1.5vw;
   animation-name: fiterPageAnimation2;
   animation-duration: 0.7s;
 }
@@ -379,19 +389,28 @@ hr{
 }
 @keyframes fiterPageAnimation {
   from {height: 0;}
-  to {height: 20vw;}
+  to {height: 12vw;}
 }
 @keyframes fiterPageAnimation2 {
-  from {height: 20vw;}
+  from {height: 12vw;}
   to {height: 0;}
 }
 .product-heading > div > a{
   border: 1px solid rgb(165, 158, 158);
-  padding: 0.5vw 5vw;
+  padding: 0.5vw 3vw;
   font-size: 1.2vw;
   border-radius: 0.2vw;
   margin: 0.2vw;
   transition: 0.3s ease;
+  display: flex;
+}
+.shop-search-filter{
+  display: flex;
+  width: 18.4vw;
+  justify-content: center;
+  align-items: center;
+  height: 4.5vw;
+  margin-left: 3vw;
 }
 .search-bar{
   height: 2.4vw;
@@ -410,18 +429,21 @@ hr{
   background-color: #17181f;
 }
 .filter-items{
-  width: 80vw;
+  width: 46vw;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 20vw;
+  height: 10vw;
   background-color: #f9f9f9;
 }
 .filter-items> h2{
   font-size: 1.5vw;
-  margin-bottom: 1.5vw;
-  width: 9vw;
+  width: 10vw;
+  margin-right: 1vw;
+  margin-left: 1vw;
+  text-align: center;
+  margin-bottom: 0.4vw;
 }
 .filter-items> a{
   line-height: 1.5vw;
