--- a/src/App.css
+++ b/src/App.css
@@ -524,8 +524,9 @@ hr{
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   width: 100%;
+  height: 100vh;
   margin-top: 5vw;
 }
 td{
@@ -539,8 +540,9 @@ td{
 }
 .product-details{
   margin-right: 5vw;
-  border: 1.5px solid #e1dbdb;
+  /* border: 1.5px solid #e1dbdb; */
   border-radius: 0.3vw;
+  /* height: 30vw; */
 }
 .product-table-header{
   border: none;
